create: GetViewers API
